# em-usb-pad

./: .gitmodules  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: keymatrix.rs  main.rs  xinput.rs
